<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MtechActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:id="@+id/appbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/colappsingtoolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="?attr/colorPrimary"
            app:title="MAT"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:background="@drawable/ic_back">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarid"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>



    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginBottom="70dp">




        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                app:cardCornerRadius="12dp"
                app:cardElevation="10dp">
                <LinearLayout
                    android:layout_width="375dp"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Basic Information"
                        android:layout_gravity="center"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mtech_info"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:layout_centerHorizontal="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/mtech_info1"
                        android:textColor="#000000"
                        android:textSize="17sp"
                        android:layout_gravity="center"
                        android:layout_centerHorizontal="true"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/mtech_info2"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:layout_centerHorizontal="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="Addmission"
                        android:textColor="#000000"
                        android:textSize="17sp"
                        android:layout_gravity="center"
                        android:layout_centerHorizontal="true"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/mtech_info3"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:layout_centerHorizontal="true"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvExamPattern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                app:cardCornerRadius="0dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="375dp"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="Exam Pattern"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:layout_centerHorizontal="true"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:id="@+id/cvFee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                app:cardCornerRadius="0dp"
                app:cardElevation="10dp"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:layout_width="375dp"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Exam Fees"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCriteria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                app:cardCornerRadius="0dp"
                app:cardElevation="10dp"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:layout_width="375dp"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Eligibility Criteria"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvScoreCal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                app:cardCornerRadius="0dp"
                app:cardElevation="10dp"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:id="@+id/tvBooks"
                    android:layout_width="375dp"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Score Calculate"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

